Added bmi form.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,22 @@
     <section>
         <div class="photo"></div>
         <div class="container row">
-            <div class="formBackground bmi"> BMI calc</div>
+            <div class="formBackground bmi">
+                <p>Oblicz swój wskaźnik BMI</p>
+                <form class="bmiForm">
+                    <label>Płeć:</label>
+                    <input type="radio">
+                    <label>K</label>
+                    <input type="radio">
+                    <label>M</label><br>
+                    <label>Wzrost:</label>
+                    <input type="text"><br>
+                    <label>Waga:</label>
+                    <input type="text">
+                </form>
+                <div class="bmiBtn">Oblicz!</div>
+            </div>
+
             <div class="formBackground calories"> CALORIES calc</div>
             <div class="formBackground basicMetabolism"> podstawowa przemiana materii</div>
             <div class="formBackground totalMetabolism"> calkowita przemiana materii</div>
