--- a/index.html
+++ b/index.html
@@ -21,10 +21,17 @@
                     <li class="btnFour"><a>Całkowita przemiana materii</a></li>
                 </ul>
             </nav>
+
+            <div class="hamburger">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
+
         </div>
     </header>
     <section>
-        <div class="photo"></div>
+        <div class="photo">
         <div class="container row">
             <div class="formBackground bmi">
                 <p>Oblicz swój wskaźnik BMI</p>
@@ -33,20 +40,22 @@
                     <input type="radio">
                     <label>K</label>
                     <input type="radio">
-                    <label>M</label><br>
+                    <label>M</label>
+                    <br>
                     <label>Wzrost:</label>
-                    <input type="text"><br>
+                    <input type="text">
+                    <br>
                     <label>Waga:</label>
                     <input type="text">
                 </form>
                 <div class="bmiBtn">Oblicz!</div>
             </div>
-
+            
             <div class="formBackground calories"> CALORIES calc</div>
             <div class="formBackground basicMetabolism"> podstawowa przemiana materii</div>
             <div class="formBackground totalMetabolism"> calkowita przemiana materii</div>
         </div>
-
+</div>
     </section>
 
 </body>
