--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
         <div class="photo">
         <div class="container row">
             <div class="formBackground bmi">
-                <p>Oblicz swój wskaźnik BMI</p>
+                <p>Oblicz swój wskaźnik <span>BMI</span></p>
                 <form class="bmiForm">
                     <label>Płeć:</label>
                     <input type="radio">
-                    <label>K</label>
+                    <label class="gender">K</label>
                     <input type="radio">
-                    <label>M</label>
+                    <label class="gender">M</label>
                     <br>
                     <label>Wzrost:</label>
-                    <input type="text">
+                    <input type="text" class="firstInputBmi"> <label>cm</label>
                     <br>
                     <label>Waga:</label>
-                    <input type="text">
+                    <input type="text" class="secondInputBmi"> <label>kg</label>
                 </form>
-                <div class="bmiBtn">Oblicz!</div>
+                <div class="bmiBtn"><p>OBLICZ!</p></div>
             </div>
             
             <div class="formBackground calories"> CALORIES calc</div>
