BMI form calculator - validation error css graphics v2.

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
                     <div class="formBackground bmi">
                         <p>Oblicz swój wskaźnik <span>BMI</span></p>
                         <form class="bmiForm">
-                            <label name="genderType">Płeć:</label>
+                            <label id="genderType">Płeć:</label>
                             <input type="radio" name="womanRadio">
-                            <label class="gender" name="genderWoman">K</label>
+                            <label class="gender" id="genderWoman">K</label>
                             <input type="radio"name="menRadio">
-                            <label class="gender" name="genderMan">M</label>
+                            <label class="gender" id="genderMan">M</label>
                             <br>
-                            <label name="heightLabel">Wzrost:</label>
+                            <label id="heightLabel">Wzrost:</label>
                             <input type="text" class="firstInputBmi" id="height" name="height">
-                            <label name="cmUnit">cm</label>
+                            <label id="cmUnit">cm</label>
                             <br>
-                            <label name="weightLabel">Waga:</label>
+                            <label id="weightLabel">Waga:</label>
                             <input type="text" class="secondInputBmi" id="weight" name="weight">
-                            <label name="kgLabel">kg</label>
+                            <label id="kgUnit">kg</label>
                             
                             <label class="test"></label>
                         </form>
