--- a/index.html
+++ b/index.html
@@ -33,34 +33,41 @@
     <section>
         <div class="photo">
             <div class="container row">
-                    <div class="formBackground bmi">
-                        <p>Oblicz swój wskaźnik <span>BMI</span></p>
-                        <form class="bmiForm">
-                            <label id="genderType">Płeć:</label>
-                            <input type="radio" name="Radio" value="1" class="womanRadio">
-                            <label class="gender" id="genderWoman">K</label>
-                            <input type="radio"name="Radio" value="2" class="menRadio">
-                            <label class="gender" id="genderMan">M</label>
-                            <br>
-                            <label id="heightLabel">Wzrost:</label>
-                            <input type="text" class="firstInputBmi" id="height" name="height">
-                            <label id="cmUnit">cm</label>
-                            <br>
-                            <label id="weightLabel">Waga:</label>
-                            <input type="text" class="secondInputBmi" id="weight" name="weight">
-                            <label id="kgUnit">kg</label>
-                            
-                            <label class="errorLabel"></label>
-                        </form>
-                        <div class="bmiBtn" type="button">
-                            <p>OBLICZ!</p>
-                        </div>
+                <div class="formBackground bmi">
+                    <p>Oblicz swój wskaźnik <span>BMI</span></p>
+                    <form class="bmiForm">
+                        <label id="genderType">Płeć:</label>
+                        <input type="radio" name="Radio" value="1" class="womanRadio">
+                        <label class="gender" id="genderWoman">K</label>
+                        <input type="radio" name="Radio" value="2" class="menRadio">
+                        <label class="gender" id="genderMan">M</label>
+                        <br>
+                        <label id="heightLabel">Wzrost:</label>
+                        <input type="text" class="firstInputBmi" id="height" name="height">
+                        <label id="cmUnit">cm</label>
+                        <br>
+                        <label id="weightLabel">Waga:</label>
+                        <input type="text" class="secondInputBmi" id="weight" name="weight">
+                        <label id="kgUnit">kg</label>
+
+                        <label class="errorLabel"></label>
+                    </form>
+                    <div class="bmiBtn" type="button">
+                        <p>OBLICZ!</p>
                     </div>
                 </div>
-                <div class="formBackground calories"> CALORIES calc</div>
-                <div class="formBackground basicMetabolism"> podstawowa przemiana materii</div>
-                <div class="formBackground totalMetabolism"> calkowita przemiana materii</div>
             </div>
+            <div class="formBackground calories"> CALORIES calc</div>
+            <div class="formBackground basicMetabolism"> podstawowa przemiana materii</div>
+            <div class="formBackground totalMetabolism"> calkowita przemiana materii</div>
+        </div>
+        <div class="bgClick">
+            <div class="back"></div>
+            <div class="formBackground"></div>
+            <div class="bmiBtn" type="button">
+                <p>OBLICZ!</p>
+            </div>
+        </div>
     </section>
 
 </body>
