BMI form calculator - background send form v2.

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         </div>
         <div class="bgClick">
             <div class="back"></div>
-            <div class="formBackground"></div>
-            <div class="bmiBtn" type="button">
+            <div class="formBackground finalFormBg"></div>
+            <div class="bmiBtn closeFormBtn" type="button">
                 <p>OBLICZ!</p>
             </div>
         </div>
