BMI form calculator - bmi scale v3. Calc done.

--- a/index.html
+++ b/index.html
@@ -57,17 +57,25 @@
                     </div>
                 </div>
             </div>
-            <div class="formBackground calories"> CALORIES calc</div>
+            <div class="formBackground calories"> CALORIES calc
+            </div>
             <div class="formBackground basicMetabolism"> podstawowa przemiana materii</div>
             <div class="formBackground totalMetabolism"> calkowita przemiana materii</div>
         </div>
+
         <div class="bgClick">
             <div class="back"></div>
-            <div class="formBackground finalFormBg"></div>
+            <div class="formBackground finalFormBg">
+                <h2 class="head">Gratulacje!</h2>
+                <p>Twój wskaźnik BMI wynosi:<span class="result">BMI</span> i oznacza <span class="
+                    description"></span>!</p>
+
+            </div>
             <div class="bmiBtn closeFormBtn" type="button">
-                <p>OBLICZ!</p>
+                <p>POWRÓT</p>
             </div>
         </div>
+
     </section>
 
 </body>
