--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
                     <p>Oblicz swój wskaźnik <span>BMI</span></p>
                     <form class="bmiForm">
                         <label id="genderType">Płeć:</label>
-                        <input type="radio" name="Radio" value="1" class="womanRadio">
+                        <input type="radio" name="Radio" value="1" class="womanRadio" placeholder=" ">
                         <label class="gender" id="genderWoman">K</label>
-                        <input type="radio" name="Radio" value="2" class="menRadio">
+                        <input type="radio" name="Radio" value="2" class="menRadio" placeholder=" ">
                         <label class="gender" id="genderMan">M</label>
                         <br>
                         <label id="heightLabel">Wzrost:</label>
-                        <input type="text" class="firstInputBmi" id="height" name="height">
+                        <input type="text" class="firstInputBmi" id="height" name="height" placeholder=" ">
                         <label id="cmUnit">cm</label>
                         <br>
                         <label id="weightLabel">Waga:</label>
-                        <input type="text" class="secondInputBmi" id="weight" name="weight">
+                        <input type="text" class="secondInputBmi" id="weight" name="weight"placeholder=" ">
                         <label id="kgUnit">kg</label>
 
                         <label class="errorLabel"></label>
@@ -69,9 +69,22 @@
                 <h2 class="head">Gratulacje!</h2>
                 <p>Twój wskaźnik BMI wynosi:<span class="result">BMI</span> i oznacza <span class="
                     description"></span>!</p>
-
+                <div class="bmiScale">
+                    <h2>Zakresy wartości BMI</h2>
+                        <ul class="list">
+                            <li>16,0 – wygłodzenie </li>
+                            <li> 16,0–16,99 – wychudzenie (spowodowane często przez ciężką chorobę lub anoreksję) </li>
+                            <li> 17,0–18,49 – niedowagę </li>
+                            <li> 18,5–24,99 – wartość prawidłową </li>
+                            <li> 25,0–29,99 – nadwagę </li>
+                            <li> 30,0–34,99 – I stopień otyłości </li>
+                            <li> 35,0–39,99 – II stopień otyłości (otyłość kliniczna) </li>
+                            <li> ≥ 40,0 – III stopień otyłości (otyłość skrajna) </li>
+                        </ul>
+                </div>
             </div>
-            <div class="bmiBtn closeFormBtn" type="button">
+
+            <div class="bmiBtn closeFormBtn" type="button" value="reset">
                 <p>POWRÓT</p>
             </div>
         </div>
