total metabolism calculator - graphics. v1

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <br>
                     <label id="heightLabel">Wiek:</label>
                     <input type="text" class="thirdInputBmi old" id="height" name="old" placeholder="">
-                    <label id="oldUnit">(18-99)</label>
+                    <label id="oldUnit">(6-99)</label>
                     <br>
                     <label id="heightLabel">Wzrost:</label>
                     <input type="text" class="firstInputBmi" id="height" name="height" placeholder=" ">
@@ -102,8 +102,8 @@
                     <label class="gender" id="genderMan">M</label>
                     <br>
                     <label id="heightLabel">Wiek:</label>
-                    <input type="text" class="firstInputBmi old" id="height" name="old" placeholder="">
-                    <label id="oldUnit">(18-99)</label>
+                    <input type="text" class="thirdInputBmi old" id="height" name="old" placeholder="">
+                    <label id="oldUnit">(6-99)</label>
                     <br>
                     <label id="heightLabel">Wzrost:</label>
                     <input type="text" class="firstInputBmi" id="height" name="height" placeholder=" ">
@@ -114,17 +114,17 @@
                     <label id="kgUnit">kg</label>
                     <br>
                     <label id="kgUnit">Poziom aktywności fizycznej: </label>
-                    <select>
-                        <option value="zeroActyvity">Brak aktywności fizycznej</option>
-                        <option value="smallActyvity">Mała aktywność fizyczna (1-3 razy tygodniowo)</option>
-                        <option value="mediumActyvity">Średnia aktywność fizyczna (3-5 razy tygodniowo)</option>
-                        <option value="bigActyvity">Duża aktywność fizyczna (codziennie)</option>
-                        <option value="veryBigActyvity">Bardzo duża aktywność fizyczna (codziennie)</option>
+                    <select class="activity">
+                        <option value="zeroActivity">Brak aktywności fizycznej</option>
+                        <option value="smallActvity">Mała aktywność fizyczna (1-3 razy tygodniowo)</option>
+                        <option value="mediumActivity">Średnia aktywność fizyczna (3-5 razy tygodniowo)</option>
+                        <option value="bigActivity">Duża aktywność fizyczna (codziennie)</option>
+                        <option value="veryBigActivity">Bardzo duża aktywność fizyczna (codziennie)</option>
                     </select>
 
                     <label class="errorLabel"></label>
                 </form>
-                <div class="caloriesBtn" type="button">
+                <div class="totalMetabolismBtn" type="button">
                     <p>OBLICZ!</p>
                 </div>
             </div>
