--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <input type="radio" name="Radio" value="2" class="menRadio" placeholder=" ">
                     <label class="gender" id="genderMan">M</label>
                     <br>
-                    <label id="heightLabel">Wiek:</label>
+                    <label id="oldLabel">Wiek:</label>
                     <input type="text" class="thirdInputBmi old" id="height" name="old" placeholder="">
                     <label id="oldUnit">(6-99)</label>
                     <br>
