basic metabolism calculator - calc functions. v3

--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
                      <label id="kgUnit">Wybierz metodę:</label>
                     <br>
                     <select class="methodOption">
-                        <option>metoda Harrisa-Benedicta</option>
-                        <option>metoda MD Mifflin'a oraz ST St Jeor'a</option>
-                        <option>metoda The Katch-McArdle Formula (RMR)</option>
+                        <option value="1">metoda Harrisa-Benedicta</option>
+                        <option value="2">metoda MD Mifflin'a oraz ST St Jeor'a</option>
                     </select>
                     <br>
                     <label id="genderType">Płeć:</label>
