basic metabolism calculator - validation. v1

--- a/index.html
+++ b/index.html
@@ -55,80 +55,80 @@
                         <p>OBLICZ!</p>
                     </div>
                 </div>
-            </div>
-            <div class="formBackground basicMetabolism">
-                <p>Oblicz swoją <span>podstawową</span> przemianę materii</p>
-                <form class="bmForm">
-                     <label id="kgUnit">Wybierz metodę:</label>
-                    <br>
-                    <select class="methodOption">
-                        <option value="1">metoda Harrisa-Benedicta</option>
-                        <option value="2">metoda MD Mifflin'a oraz ST St Jeor'a</option>
-                    </select>
-                    <br>
-                    <label id="genderType">Płeć:</label>
-                    <input type="radio" name="Radio" value="1" class="womanRadio" placeholder=" ">
-                    <label class="gender" id="genderWoman">K</label>
-                    <input type="radio" name="Radio" value="2" class="menRadio" placeholder=" ">
-                    <label class="gender" id="genderMan">M</label>
-                    <br>
-                    <label id="oldLabel">Wiek:</label>
-                    <input type="text" class="thirdInputBmi old" id="height" name="old" placeholder="">
-                    <label id="oldUnit">(6-99)</label>
-                    <br>
-                    <label id="heightLabel">Wzrost:</label>
-                    <input type="text" class="firstInputBmi" id="height" name="height" placeholder=" ">
-                    <label id="cmUnit">cm</label>
-                    <br>
-                    <label id="weightLabel">Waga:</label>
-                    <input type="text" class="secondInputBmi" id="weight" name="weight" placeholder=" ">
-                    <label id="kgUnit">kg</label>
-                    <br>
-                    <label class="errorLabel"></label>
-                </form>
-                <div class="caloriesBtn" type="button">
-                    <p>OBLICZ!</p>
-                    
-                </div>
-            </div>
-            <div class="formBackground totalMetabolism">
-                <p>Oblicz swoją <span>całkowitą</span> przemianę materii</p>
-                <form class="tmForm">
-                    <label id="genderType">Płeć:</label>
-                    <input type="radio" name="Radio" value="1" class="womanRadio" placeholder=" ">
-                    <label class="gender" id="genderWoman">K</label>
-                    <input type="radio" name="Radio" value="2" class="menRadio" placeholder=" ">
-                    <label class="gender" id="genderMan">M</label>
-                    <br>
-                    <label id="heightLabel">Wiek:</label>
-                    <input type="text" class="thirdInputBmi old" id="height" name="old" placeholder="">
-                    <label id="oldUnit">(6-99)</label>
-                    <br>
-                    <label id="heightLabel">Wzrost:</label>
-                    <input type="text" class="firstInputBmi" id="height" name="height" placeholder=" ">
-                    <label id="cmUnit">cm</label>
-                    <br>
-                    <label id="weightLabel">Waga:</label>
-                    <input type="text" class="secondInputBmi" id="weight" name="weight" placeholder=" ">
-                    <label id="kgUnit">kg</label>
-                    <br>
-                    <label id="kgUnit">Poziom aktywności fizycznej: </label>
-                    <select class="activity">
-                        <option value="zeroActivity">Brak aktywności fizycznej</option>
-                        <option value="smallActvity">Mała aktywność fizyczna (1-3 razy tygodniowo)</option>
-                        <option value="mediumActivity">Średnia aktywność fizyczna (3-5 razy tygodniowo)</option>
-                        <option value="bigActivity">Duża aktywność fizyczna (codziennie)</option>
-                        <option value="veryBigActivity">Bardzo duża aktywność fizyczna (codziennie)</option>
-                    </select>
 
-                    <label class="errorLabel"></label>
-                </form>
-                <div class="totalMetabolismBtn" type="button">
-                    <p>OBLICZ!</p>
+                <div class="formBackground basicMetabolism">
+                    <p>Oblicz swoją <span>podstawową</span> przemianę materii</p>
+                    <form class="bmForm">
+                        <label>Wybierz metodę:</label>
+                        <br>
+                        <select class="methodOption">
+                            <option value="1">metoda Harrisa-Benedicta</option>
+                            <option value="2">metoda MD Mifflin'a oraz ST St Jeor'a</option>
+                        </select>
+                        <br>
+                        <label id="genderType">Płeć:</label>
+                        <input type="radio" name="Radio" value="1" class="womanRadio" placeholder=" ">
+                        <label class="gender" id="genderWoman">K</label>
+                        <input type="radio" name="Radio" value="2" class="menRadio" placeholder=" ">
+                        <label class="gender" id="genderMan">M</label>
+                        <br>
+                        <label id="oldLabel">Wiek:</label>
+                        <input type="text" class="thirdInputBmi old" id="height" name="old" placeholder="">
+                        <label id="oldUnit">(6-99)</label>
+                        <br>
+                        <label id="heightLabel">Wzrost:</label>
+                        <input type="text" class="firstInputBmi" id="height" name="height" placeholder=" ">
+                        <label id="cmUnit">cm</label>
+                        <br>
+                        <label id="weightLabel">Waga:</label>
+                        <input type="text" class="secondInputBmi" id="weight" name="weight" placeholder=" ">
+                        <label id="kgUnit">kg</label>
+                        <br>
+                        <label class="errorLabel"></label>
+                    </form>
+                    <div class="caloriesBtn" type="button">
+                        <p>OBLICZ!</p>
+
+                    </div>
+                </div>
+                <div class="formBackground totalMetabolism">
+                    <p>Oblicz swoją <span>całkowitą</span> przemianę materii</p>
+                    <form class="tmForm">
+                        <label id="genderType">Płeć:</label>
+                        <input type="radio" name="Radio" value="1" class="womanRadio" placeholder=" ">
+                        <label class="gender" id="genderWoman">K</label>
+                        <input type="radio" name="Radio" value="2" class="menRadio" placeholder=" ">
+                        <label class="gender" id="genderMan">M</label>
+                        <br>
+                        <label id="heightLabel">Wiek:</label>
+                        <input type="text" class="thirdInputBmi old" id="height" name="old" placeholder="">
+                        <label id="oldUnit">(6-99)</label>
+                        <br>
+                        <label id="heightLabel">Wzrost:</label>
+                        <input type="text" class="firstInputBmi" id="height" name="height" placeholder=" ">
+                        <label id="cmUnit">cm</label>
+                        <br>
+                        <label id="weightLabel">Waga:</label>
+                        <input type="text" class="secondInputBmi" id="weight" name="weight" placeholder=" ">
+                        <label id="kgUnit">kg</label>
+                        <br>
+                        <label id="kgUnit">Poziom aktywności fizycznej: </label>
+                        <select class="activity">
+                            <option value="zeroActivity">Brak aktywności fizycznej</option>
+                            <option value="smallActvity">Mała aktywność fizyczna (1-3 razy tygodniowo)</option>
+                            <option value="mediumActivity">Średnia aktywność fizyczna (3-5 razy tygodniowo)</option>
+                            <option value="bigActivity">Duża aktywność fizyczna (codziennie)</option>
+                            <option value="veryBigActivity">Bardzo duża aktywność fizyczna (codziennie)</option>
+                        </select>
+
+                        <label class="errorLabel"></label>
+                    </form>
+                    <div class="totalMetabolismBtn" type="button">
+                        <p>OBLICZ!</p>
+                    </div>
                 </div>
             </div>
         </div>
-
         <div class="bgClick">
             <div class="back"></div>
             <div class="formBackground finalFormBg">
