--- a/index.html
+++ b/index.html
@@ -133,8 +133,9 @@
             <div class="back"></div>
             <div class="formBackground finalFormBg">
                 <h2 class="head">Gratulacje!</h2>
-                <p>Twój wskaźnik BMI wynosi: <span class="result">BMI</span> i oznacza <span class="
+                <p class="bmidesc">Twój wskaźnik BMI wynosi: <span class="result">BMI</span> i oznacza <span class="
                     description"></span>!</p>
+                <p class="ppmdesc">Twoja podstawowa przemiana materii wynosi: <span class="result"></span> !</p>
                 <div class="bmiScale">
                     <h2>Zakresy wartości BMI</h2>
                     <ul class="list">
@@ -148,6 +149,12 @@
                         <li> ≥ 40,0 – III stopień otyłości (otyłość skrajna) </li>
                     </ul>
                 </div>
+                <div class="ppmScale">
+                    <h2>Warto wiedzieć...</h2>
+                    <p id="ppmFont" class="list">Do pomiarów natężenia wydatków energetycznych związanych z wykonywaniem różnorodnych czynności wykorzystuje się metody kalorymetrii bezpośredniej i pośredniej. Pierwsza z metod, polegająca na oznaczeniu ilości wydalanego przez organizm ciepła w jednostce czasu, ze względu na wysokie koszty badań i kłopotliwość pomiaru, stosowana jest bardzo rzadko i wyłącznie do celów naukowych. Szerokie zastosowanie praktyczne znajduje natomiast metoda kalorymetrii pośredniej, polegająca na pomiarze objętości zużytego przez organizm tlenu i wytworzonego dwutlenku węgla w jednostce czasu. Na podstawie zmierzonych parametrów respiracyjnych oblicza się ilość wydatkowanej energii.</p>
+                </div>
+
+
             </div>
 
             <div class="bmiBtn closeFormBtn" type="button" value="reset">
