--- a/index.html
+++ b/index.html
@@ -115,10 +115,11 @@
                         <label id="kgUnit">Poziom aktywności fizycznej: </label>
                         <select class="activity">
                             <option value="zeroActivity">Brak aktywności fizycznej</option>
-                            <option value="smallActvity">Mała aktywność fizyczna (1-3 razy tygodniowo)</option>
-                            <option value="mediumActivity">Średnia aktywność fizyczna (3-5 razy tygodniowo)</option>
-                            <option value="bigActivity">Duża aktywność fizyczna (codziennie)</option>
-                            <option value="veryBigActivity">Bardzo duża aktywność fizyczna (codziennie)</option>
+                            <option value="smallActvity">Mała aktywność fizyczna </option>
+                            <option value="mediumActivity">Umiarkowana aktywność fizyczna </option>
+                            <option value="activeActivity">Aktywny tryb życia </option>
+                            <option value="bigActivity">Bardzo aktywny tryb życia </option>
+                            <option value="veryBigActivity">Wyczynowe uprawianie sportu </option>
                         </select>
 
                         <label class="errorLabel"></label>
@@ -135,7 +136,7 @@
                 <h2 class="head">Gratulacje!</h2>
                 <p class="bmidesc">Twój wskaźnik BMI wynosi: <span class="result">BMI</span> i oznacza <span class="
                     description"></span>!</p>
-                <p class="ppmdesc">Twoja podstawowa przemiana materii wynosi: <span class="result"></span> !</p>
+                <p class="ppmdesc">Twoja podstawowa przemiana materii wynosi: <span class="result"></span> kcal!</p>
                 <div class="bmiScale">
                     <h2>Zakresy wartości BMI</h2>
                     <ul class="list">
