total metabolism calculator - send form bg. v5

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
                 <p class="bmidesc">Twój wskaźnik BMI wynosi: <span class="result">BMI</span> i oznacza <span class="
                     description"></span>!</p>
                 <p class="ppmdesc">Twoja podstawowa przemiana materii wynosi: <span class="result"></span> kcal!</p>
+                <p class="tpmdesc">Twoja całkowita przemiana materii wynosi: <span class="result"></span> kcal!</p>
                 <div class="bmiScale">
                     <h2>Zakresy wartości BMI</h2>
                     <ul class="list">
@@ -153,6 +154,10 @@
                 <div class="ppmScale">
                     <h2>Warto wiedzieć...</h2>
                     <p id="ppmFont" class="list">Do pomiarów natężenia wydatków energetycznych związanych z wykonywaniem różnorodnych czynności wykorzystuje się metody kalorymetrii bezpośredniej i pośredniej. Pierwsza z metod, polegająca na oznaczeniu ilości wydalanego przez organizm ciepła w jednostce czasu, ze względu na wysokie koszty badań i kłopotliwość pomiaru, stosowana jest bardzo rzadko i wyłącznie do celów naukowych. Szerokie zastosowanie praktyczne znajduje natomiast metoda kalorymetrii pośredniej, polegająca na pomiarze objętości zużytego przez organizm tlenu i wytworzonego dwutlenku węgla w jednostce czasu. Na podstawie zmierzonych parametrów respiracyjnych oblicza się ilość wydatkowanej energii.</p>
+                </div>
+                <div class="tpmScale">
+                    <h2>Co zrobić, aby schudnąć?</h2>
+                    <p id="tpmFont" class="list">W przypadku podjęcia decyzji o schudnięciu od odliczonego CPM odejmuje się od 200 do 300 kalorii na dobę. W takim przypadku zapewnia się sobie optymalne zdrowe chudnięcie wynoszące od 0,5 do maksymalnie 0,75 kg na tydzień. W przypadku osób otyłych bądź mających dużą nadwagę dopuszczalne jest ucięcie większej ilości kalorii.</p>
                 </div>
 
 
