--- a/index.html
+++ b/index.html
@@ -171,6 +171,6 @@
     </section>
 
 </body>
-<script src="js/animation.js" type="text/javascript"></script>
+<script src="dist/animation.js" type="text/javascript"></script>
 
 </html>
