--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMI and Calories calculator</title>
     <link rel="stylesheet" href="css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,400,400i,500,500i,600,600i,700,700i,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700" rel="stylesheet">
 </head>
 
 <body>
@@ -171,6 +171,6 @@
     </section>
 
 </body>
-<script src="dist/animation.js" type="text/javascript"></script>
+<script src="js/animation.js" type="text/javascript"></script>
 
 </html>
